# Licenta

./: build-android.bat
CYClient/: settings.gradle.kts
CYClient/client/: build.gradle.kts
CYClient/crypto_engine/: build.gradle.kts
CYClient/crypto_engine/src/main/java/atm/licenta/crypto_engine/cpp/: CMakeLists.txt  oqs_jni.cpp
CYClient/crypto_engine/src/main/java/atm/licenta/crypto_engine/cpp/liboqs/include/oqs/: oqsconfig.h
CYClient/gradle/: libs.versions.toml
CYClient/gradle/wrapper/: gradle-wrapper.properties
GO/account_service/: account.conf  account_service.go  go.mod  go.sum
GO/account_service/data/: account.go  identity_public_key_response.go  prekeybundle.go  registeraccount.go  status.go
GO/account_service/database/: mysql.go
GO/account_service/errors/: jsonerror.go
GO/account_service/handlers/: chat.go  profile.go  register.go
GO/account_service/server/: server.go
GO/chat_service/: chat.conf  chat_service.go  go.mod  go.sum
GO/chat_service/data/: config.go  pendingmessage.go  publickeyresponse.go
GO/chat_service/database/: iconnection.go  mysql.go
GO/chat_service/handlers/: chat.go
GO/chat_service/logger/: logger.go
GO/chat_service/server/: server.go
GO/chat_service/utils/: utils.go
GO/chat_service/websocket/: client.go  pool.go
GO/proxy_gateway/: gateway.conf  go.mod  proxy_gateway.go  server.crt  server.key
GO/proxy_gateway/data/: config.go
GO/proxy_gateway/handlers/: feedback.go  register.go
GO/proxy_gateway/logger/: logger.go
GO/signaling_service/: go.mod  server.crt  server.key  signaling_service.go
(+113 files in other folders)
